--- a/appspec.yml
+++ b/appspec.yml
@@ -4,10 +4,7 @@ files:
   - source: /index.html
     destination: /var/www/html/
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
+  AfterInstall:
     - location: scripts/start_server
       timeout: 300
       runas: root
@@ -15,4 +12,7 @@ hooks:
     - location: scripts/stop_server
       timeout: 300
       runas: root
-
+  BeforeInstall:
+    - location: scripts/install_dependencies
+      timeout: 300
+      runas: root
