--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,8 @@ os: linux
 files:
   - source: /index.html
     destination: /var/www/html/
+  - source: /default
+    destination: /etc/nginx/sites-available/
 hooks:
   AfterInstall:
     - location: scripts/start_server
